--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "files": [
     "dist"
   ],
- "scripts": {
+  "scripts": {
     "test": "jest"
   },
   "repository": {
@@ -22,5 +22,8 @@
   "homepage": "https://github.com/otchy210/home-tube-api#readme",
   "publishConfig": {
     "access": "public"
+  },
+  "devDependencies": {
+    "typescript": "^4.5.4"
   }
 }
