--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@otchy/home-tube-api",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "API Server for HomeTube",
   "type": "module",
   "main": "dist/index.js",
@@ -8,7 +8,9 @@
     "dist"
   ],
   "scripts": {
-    "test": "jest"
+    "build": "tsc",
+    "test": "jest",
+    "prepare": "npm run build"
   },
   "repository": {
     "type": "git",
