--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@otchy/home-tube-api",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "API Server for HomeTube",
   "type": "module",
   "main": "dist/index.js",
@@ -10,6 +10,8 @@
   "scripts": {
     "build": "tsc",
     "test": "jest",
+    "lint": "eslint src/*",
+    "lint:fix": "eslint --fix src/*",
     "prepare": "npm run build"
   },
   "repository": {
@@ -27,7 +29,17 @@
   },
   "devDependencies": {
     "@types/jest": "^27.0.3",
+    "@typescript-eslint/eslint-plugin": "^5.7.0",
+    "@typescript-eslint/parser": "^5.7.0",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-promise": "^5.2.0",
     "jest": "^27.4.5",
+    "prettier": "^2.5.1",
     "ts-jest": "^27.1.2",
     "typescript": "^4.5.4"
   },
