--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@otchy/home-tube-api",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "API Server for HomeTube",
   "type": "module",
   "main": "dist/index.js",
@@ -30,6 +30,7 @@
   "devDependencies": {
     "@types/jest": "^27.0.3",
     "@types/node": "^17.0.0",
+    "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
     "eslint": "^7.32.0",
@@ -41,6 +42,7 @@
     "eslint-plugin-promise": "^5.2.0",
     "jest": "^27.4.5",
     "prettier": "^2.5.1",
+    "supertest": "^6.1.6",
     "ts-jest": "^27.1.2",
     "typescript": "^4.5.4"
   },
