--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@otchy/home-tube-api",
-  "version": "0.0.15",
+  "version": "0.0.16",
   "description": "API Server for HomeTube",
   "type": "module",
   "main": "dist/index.js",
@@ -53,5 +53,8 @@
       }
     },
     "preset": "ts-jest/presets/default-esm"
+  },
+  "dependencies": {
+    "@otchy/sim-doc-db": "^0.9.6"
   }
 }
