--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@otchy/home-tube-api",
-    "version": "0.10.6",
+    "version": "0.10.7",
     "description": "API Server for HomeTube",
     "main": "dist/index.js",
     "files": [
@@ -32,6 +32,7 @@
         "@types/node": "^17.0.0",
         "@types/send": "^0.17.1",
         "@types/supertest": "^2.0.11",
+        "@types/yargs": "^17.0.8",
         "@typescript-eslint/eslint-plugin": "^5.7.0",
         "@typescript-eslint/parser": "^5.7.0",
         "eslint": "^7.32.0",
@@ -57,6 +58,7 @@
     },
     "dependencies": {
         "@otchy/sim-doc-db": "^0.9.13",
-        "send": "^0.17.2"
+        "send": "^0.17.2",
+        "yargs": "^17.3.1"
     }
 }
