--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@otchy/home-tube-api",
-    "version": "0.13.3",
+    "version": "0.13.4",
     "description": "API Server for HomeTube",
     "main": "dist/index.js",
     "files": [
@@ -42,6 +42,7 @@
         "eslint-plugin-node": "^11.1.0",
         "eslint-plugin-prettier": "^4.0.0",
         "eslint-plugin-promise": "^5.2.0",
+        "eslint-plugin-unused-imports": "^2.0.0",
         "jest": "^27.4.5",
         "prettier": "^2.5.1",
         "supertest": "^6.1.6",
